[package]
name = "noted"
version = "0.1.0"
edition = "2021"
authors = ["Vili Ikäheimo <vili.vikaheim@gmail.com>"]
description = "A note taking app that works on the terminal."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
dirs = {version = "5.0.1", optional = true}
lazy_static = "1.4.0"
rusqlite = "0.29.0"
text_io = "0.1.12"

[features]
deb = ["dep:dirs"]

[package.metadata.deb]
features = ["deb"]
